[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MathcadPy"
# Dynamically pulled from MathcadPy/__version__.py
dynamic = ["version", "description", "license", "authors", "maintainers", "urls"]
readme = "README.md"
requires-python = ">=3.6, <4"
dependencies = [
    "pywin32>=301; platform_system == \"Windows\"",
]
keywords = ["Mathcad", "automation", "COM", "Windows"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.entry-points."console_scripts"]
mathcadpy = "MathcadPy.entry_points:main"

[tool.setuptools.dynamic]
version = { file = "MathcadPy/__version__.py", attr = "__version__" }
description = { file = "MathcadPy/__version__.py", attr = "__description__" }
license = { file = "MathcadPy/__version__.py", attr = "__license__" }
authors = [
  { name  = { file = "MathcadPy/__version__.py", attr = "__author__" },
    email = { file = "MathcadPy/__version__.py", attr = "__author_email__" } }
]
maintainers = [
  { name  = { file = "MathcadPy/__version__.py", attr = "__author__" },
    email = { file = "MathcadPy/__version__.py", attr = "__author_email__" } }
]
urls = { Homepage = { file = "MathcadPy/__version__.py", attr = "__url__" } }

[tool.sphinx-pyproject]
# paths are relative to your project root
source-dir = "documentation/source"
build-dir  = "documentation/_build"
builder    = "html"
config     = "documentation/source/conf.py"

[project.scripts]
docs = "sphinx.cmd.build:main"
